Added Swagger API Document Header Authorization
